[gd_scene load_steps=4 format=3 uid="uid://b0y5x1yrvv1wx"]

[ext_resource type="Script" path="res://scripts/power_up/PowerUpSelect.gd" id="1_y83kq"]
[ext_resource type="PackedScene" uid="uid://bkvrgb2drocjs" path="res://prefab/PowerUpOption.tscn" id="2_b7kof"]
[ext_resource type="Texture2D" uid="uid://e2l70clolq7a" path="res://sprites/bg.png" id="2_glxc4"]

[node name="PowerUpSelect" type="Node2D"]
script = ExtResource("1_y83kq")

[node name="Bg" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(3, 3)
texture = ExtResource("2_glxc4")
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="PowerUpOption" parent="CanvasLayer/Control/HBoxContainer" instance=ExtResource("2_b7kof")]
layout_mode = 2

[node name="PowerUpOption2" parent="CanvasLayer/Control/HBoxContainer" instance=ExtResource("2_b7kof")]
layout_mode = 2

[node name="PowerUpOption3" parent="CanvasLayer/Control/HBoxContainer" instance=ExtResource("2_b7kof")]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 140.0
offset_bottom = 182.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Choose a power up![/center]"
fit_content = true

[node name="Button" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -123.5
offset_top = -164.0
offset_right = 123.5
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 0
text = "Continue"

[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/PowerUpOption3/Button" to="." method="_on_button_pressed"]

[editable path="CanvasLayer/Control/HBoxContainer/PowerUpOption"]
[editable path="CanvasLayer/Control/HBoxContainer/PowerUpOption2"]
[editable path="CanvasLayer/Control/HBoxContainer/PowerUpOption3"]
